--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,9 +16,10 @@ code {
     monospace;
 }
 
+/*Add carousel slick arrows */
 .slick-prev:before,
 .slick-next:before {
-  color: pink !important; /* Change to white or any visible color */
+  color: pink !important; 
   font-size: 24px !important;
   opacity: 1 !important;
 }
